Adding custom exception handler controller.